--- a/.storybook/storybook.scss
+++ b/.storybook/storybook.scss
@@ -3,5 +3,7 @@
     // add so that the top of stories isn't hidden by the iframe
     padding-top: 5px;
     height: 100vh;
+
+    background-color: aqua;
   }
 }
