Fix ed styling of link

--- a/src/pages/Office/MoveOrders/MoveOrders.module.scss
+++ b/src/pages/Office/MoveOrders/MoveOrders.module.scss
@@ -63,6 +63,14 @@
 
     .viewAllowances {
       @include u-padding-left(0);
+
+      &:hover {
+        text-decoration: none;
+      }
+
+      &:visited {
+        color: $primary;
+      }
     }
   }
 
