DependentsAuthorized checkbox working
Tests and styling still needed.

--- a/src/components/Office/AllowancesDetailForm/AllowancesDetailForm.module.scss
+++ b/src/components/Office/AllowancesDetailForm/AllowancesDetailForm.module.scss
@@ -24,7 +24,7 @@
     @include u-margin-bottom(3);
   }
 
-  fieldset {
+  .DependentsAuthorized {
     @include u-padding-top(1);
     @include u-padding-bottom(1);
     @include u-padding-left(2);
