--- a/src/components/Customer/MilmoveCard/MilmoveCard.module.scss
+++ b/src/components/Customer/MilmoveCard/MilmoveCard.module.scss
@@ -1,6 +1,47 @@
-.divider {
+@import 'shared/styles/_variables';
+
+.Divider {
   width: 100%;
   height: 1px;
-  // margin: 0 0 24px;
+  margin-top: 24px;
   border: solid 1px #dcdee0;
+}
+
+.CardContainer {
+  border-width: 0px;
+  max-width: 675px;
+}
+
+.CardBody {
+  padding: 40px !important; // TODO: Better way to do padding, spacing between paragraphs, spacing between unordered list and unordered list header
+
+  h3 {
+    margin-bottom: 24px;
+  }
+
+  img {
+    width: 594px;
+    height: 341px;
+  }
+}
+
+.Section {
+  &:first-child {
+    h3 {
+      margin-top: 0px;
+    }
+  }
+
+  p:last-child {
+    margin-bottom: 0px;
+  }
+
+  ul {
+    margin-top: 0px;
+    padding-left: 1.2rem;
+  }
+
+  .CounselorListHeader {
+    margin-bottom: 0px;
+  }
 }
