--- a/src/components/Customer/SectionWrapper.module.scss
+++ b/src/components/Customer/SectionWrapper.module.scss
@@ -40,6 +40,16 @@
       .usa-card-group:first-child > .usa-card--header-first:first-child .usa-card__header {
         @include u-padding-top(0);
       }
+
+      .usa-card-group:last-child > .usa-card:last-child {
+        .usa-card__container {
+          border-bottom: 0;
+        }
+
+        .usa-card__body {
+          @include u-padding-bottom(0);
+        }
+      }
     }
   }
 }
