payment request card details top and bottom padding increase

--- a/src/components/Office/PaymentRequestCard/PaymentRequestCard.module.scss
+++ b/src/components/Office/PaymentRequestCard/PaymentRequestCard.module.scss
@@ -138,6 +138,7 @@
   border-top: 1px solid #dcdee0;
   padding-left: 7.2rem;
   padding-right: 7.2rem;
+  @include u-padding-y(5);
 }
 
 .docs-icon {
