--- a/src/components/Office/PaymentRequestCard/PaymentRequestCard.module.scss
+++ b/src/components/Office/PaymentRequestCard/PaymentRequestCard.module.scss
@@ -18,9 +18,6 @@
   }
 }
 
-.summary {
-}
-
 .header {
   @include u-display(flex);
   h6 {
@@ -154,9 +151,15 @@
   border-top: 1px solid #dcdee0;
   padding-left: 7.2rem;
   padding-right: 7.2rem;
-  @include u-padding-top(5);
-  @include u-padding-bottom(2);
   @include u-margin-top(2);
+
+  > div {
+    @include u-margin-y(5);
+  }
+
+  > div:last-of-type {
+    @include u-margin-bottom(3);
+  }
 }
 
 .docs-icon {
