--- a/src/components/Office/PaymentRequestDetails/PaymentRequestDetails.module.scss
+++ b/src/components/Office/PaymentRequestDetails/PaymentRequestDetails.module.scss
@@ -83,9 +83,14 @@
     height: 6px;
     background-color: $base-light;
   }
-  .householdServiceType {
+  .hhgShipmentType {
     width: 34px;
     height: 6px;
     background-color: $accent-hhg;
+  }
+  .ntsrShipmentType {
+    width: 34px;
+    height: 6px;
+    background-color: $accent-ntsr;
   }
 }
