Apply dynamic values to CustomerHeader and pass into storybook component

--- a/src/components/CustomerHeader/index.module.scss
+++ b/src/components/CustomerHeader/index.module.scss
@@ -50,7 +50,7 @@
     }
     p {
       @include u-text('base-lighter');
-      @include u-font-size('body', '3xs')
+      @include u-font-size('body', '3xs');
       margin-bottom: 7px;
     }
 
