cleans up sass mixin to make it easier to implement error state styling in table rows

--- a/src/shared/styles/_custom.scss
+++ b/src/shared/styles/_custom.scss
@@ -150,13 +150,15 @@ table {
       vertical-align: middle;
     }
     .error {
+      th {
       @include u-border-left(0.5);
       @include u-border-left('error');
-    }
-    td.error{
-      @include u-border-left(0);
-      @include u-text('error');
-      @include u-text('bold');
+      }
+      td{
+        @include u-border-left(0);
+        @include u-text('error');
+        @include u-text('bold');
+      }
     }
   }
 }
