--- a/src/shared/styles/_overrides.scss
+++ b/src/shared/styles/_overrides.scss
@@ -145,15 +145,18 @@
   }
   &--alert {
     border-radius: 100%;
-    width: 24px;
-    height: 24px;
+    width: 16px;
+    height: 16px;
+    @include u-padding-top(.5);
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    @include u-bg('error');
     svg {
       vertical-align: sub;
       path {
         fill: #fff;
+        transform: scale(.8);
       }
     }
     .svg-inline--fa.fa-w-6 {
