--- a/src/shared/styles/_overrides.scss
+++ b/src/shared/styles/_overrides.scss
@@ -148,10 +148,12 @@
     width: 16px;
     height: 16px;
     @include u-padding-top(.5);
+    padding-left: 9px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
     @include u-bg('error');
+    margin: auto 0;
     svg {
       vertical-align: sub;
       path {
