--- a/src/components/LeftNav/index.module.scss
+++ b/src/components/LeftNav/index.module.scss
@@ -22,9 +22,18 @@
     display: flex;
     justify-content: space-between;
 
+    &:first-child {
+      border-top-left-radius: 3px;
+    }
+
+    &:last-child {
+      border-bottom-left-radius: 3px;
+    }
+
     &:not(:first-child) {
       border-top: 1px solid;
       @include u-border-y('base-lighter');
+      border-top-left-radius: 0px;
     }
 
     &:hover, &:focus {
