Make Modifications to Have the Storybook MilMoveHeader Dynamic
- take in the navigation links as children
- modify the styles to comply with new import methods and naming
- update customer to be a prop
- change the sign out link to be a button that takes in an onclick handler
- update storybook to use the new component

--- a/src/components/MilMoveHeader/index.module.scss
+++ b/src/components/MilMoveHeader/index.module.scss
@@ -4,7 +4,7 @@
 @import '../../shared/styles/mixins';
 @import '../../shared/styles/colors';
 
-.mm-header {
+.mmHeader {
   background: $mm-blue;
   width: 100vw;
   padding: 10px;
@@ -37,7 +37,7 @@
       @include u-text('no-underline');
     }
   }
-  .line-add {
+  .lineAdd {
     padding: 0px;
     background: $base-dark;
     width: 1px;
@@ -45,5 +45,16 @@
     display: inline-block;
     position: absolute;
     top: -13px;
+  }
+  .signOut {
+    color: $link-light;
+  }
+
+  :global(.usa-button) {
+    background-color: transparent;
+    display: inline-block;
+    height: 0;
+    padding: 0;
+    margin: 0;
   }
 }
