Adjust Styling On the MilMoveHeader
- change the button to be unstyled
- remove unused styles on the button
- use the <Title> component from React USWDS
- change the NavLink to an <a> tag
- removed the MemoryRouter since the NavLink was no longer being used

--- a/src/components/MilMoveHeader/index.module.scss
+++ b/src/components/MilMoveHeader/index.module.scss
@@ -51,11 +51,9 @@
   }
 
   :global(.usa-button) {
-    background-color: transparent;
     display: inline-block;
-    height: 0;
+    font-weight: bold;
     padding: 0;
-    margin: 0;
   }
 
   :global(.usa-logo) {
