Remove Underline From Links in MilMoveHeader
- remove the underline that the links had in the MilMoveHeader
- remove unneeded styling

--- a/src/components/MilMoveHeader/index.module.scss
+++ b/src/components/MilMoveHeader/index.module.scss
@@ -36,6 +36,7 @@
   :global(.usa-nav__link) {
     @include u-text('bold');
     color: $link-light;
+    text-decoration: none;
 
     &:hover,
     &:focus {
@@ -49,11 +50,6 @@
     background: $base-dark;
     width: 1px;
     align-self: stretch;
-  }
-
-  :global(.usa-nav__link) {
-    padding: 0;
-    line-height: inherit;
   }
 
   :global(.usa-logo) {
