Change the MilMoveHeader To Take in A HandleLogout and Change the Sign out Back to a Button
- change the Sign out back to a button so that the MilMoveHeader is not dependent on the MilMoveHeader
- edit MilMoveHeader to take back in a function to handle signout
- modify the office page to have both headers for now so that the login links are still accessible

--- a/src/components/MilMoveHeader/index.module.scss
+++ b/src/components/MilMoveHeader/index.module.scss
@@ -33,7 +33,7 @@
   }
 
   a,
-  :global(.usa-nav__link) {
+  .signOut {
     @include u-text('bold');
     color: $link-light;
     text-decoration: none;
@@ -43,6 +43,11 @@
       color: #b7caf0;
       @include u-text('no-underline');
     }
+  }
+
+  .signOut {
+    padding: 0;
+    line-height: inherit;
   }
 
   .verticalLine {
