--- a/src/shared/styles/_typography.scss
+++ b/src/shared/styles/_typography.scss
@@ -70,7 +70,7 @@ a,
 
   &:disabled,
   &.disabled {
-    @include u-text('gray-40');
+    @include u-text('base');
     &:hover {
       @include u-text('no-underline');
     }
