switches in 'base' in place of 'gray-40' to ensure components using this text color pass color contrast tests

--- a/src/components/Office/ReviewServiceItems/ReviewServiceItems.module.scss
+++ b/src/components/Office/ReviewServiceItems/ReviewServiceItems.module.scss
@@ -24,7 +24,7 @@
   }
 
   .eyebrowTitle {
-    @include u-text('gray-40');
+    @include u-text('base');
     @include u-font-size('body', '3xs');
     @include u-padding-top(1);
   }
