adds light link to links page in storybook and adds styling for it into the overrides.scss file where the other link styles reside

--- a/src/shared/styles/_typography.scss
+++ b/src/shared/styles/_typography.scss
@@ -80,6 +80,19 @@ a,
   &.focus {
     @include u-outline('05', 'blue-40v');
   }
+  &-light {
+    @include u-text('bold');
+    color: $link-light;
+    &:hover,
+    &.hover {
+      color: #b7caf0;
+      @include u-text('no-underline');
+    }
+    &:focus,
+    &.focus {
+      @include u-outline('05', 'blue-40v');
+    }
+  }
 }
 
 ul {
