Add Styling for the Sign Out Button
- add styling for the sign out button so that it is correctly styled in the move details page

--- a/src/components/MilMoveHeader/index.module.scss
+++ b/src/components/MilMoveHeader/index.module.scss
@@ -61,4 +61,12 @@
     margin: 0;
     padding-top: 5px;
   }
+
+  :global(.usa-button.usa-button--unstyled) {
+    color: $link-light;
+    &:hover,
+    &:focus {
+      color: #b7caf0;
+    }
+  }
 }
