Add Styling for Visited Links In The MilMoveHeader
- edit the styling for visited links so that it doesn't change color

--- a/src/components/MilMoveHeader/index.module.scss
+++ b/src/components/MilMoveHeader/index.module.scss
@@ -38,6 +38,10 @@
     color: $link-light;
     text-decoration: none;
 
+    &:visited {
+      color: $link-light;
+    }
+
     &:hover,
     &:focus {
       color: #b7caf0;
