Add Variable For Light Link
- add new variable to colors.scss for future reusability with
light colored links on hover

--- a/src/components/MilMoveHeader/index.module.scss
+++ b/src/components/MilMoveHeader/index.module.scss
@@ -44,7 +44,7 @@
 
     &:hover,
     &:focus {
-      color: #b7caf0;
+      color: $link-light-hover;
       @include u-text('no-underline');
     }
   }
@@ -70,7 +70,7 @@
     color: $link-light;
     &:hover,
     &:focus {
-      color: #b7caf0;
+      color: $link-light-hover;
     }
   }
 }
