--- a/src/shared/styles/colors.scss
+++ b/src/shared/styles/colors.scss
@@ -29,6 +29,7 @@ $success-light: #ecf3ec;
 //Group 5 Accents
 $link: #0050d8;
 $link-light: #d9e8f6;
+$link-light-hover: #b7caf0;
 $accent-teal: #027a97;
 $accent-hhg: #0096f4;
 $accent-ppm: #e6c74c;
