--- a/src/components/MilMoveHeader/index.module.scss
+++ b/src/components/MilMoveHeader/index.module.scss
@@ -10,6 +10,7 @@
   justify-content: space-between;
   align-items: center;
   height: 50px;
+  flex-shrink: 0;
 
   .links {
     color: $base-lightest;
