--- a/src/pages/MyMove/Home/Home.module.scss
+++ b/src/pages/MyMove/Home/Home.module.scss
@@ -11,6 +11,9 @@
 
   .secondaryBtn {
     box-shadow: inset 0 0 0 2px $primary;
+    &:disabled {
+      box-shadow: none;
+    }
   }
 
   > :global(.usa-alert) {
