--- a/src/containers/LoginButton/LoginButton.module.scss
+++ b/src/containers/LoginButton/LoginButton.module.scss
@@ -1,4 +1,5 @@
 @import '../../shared/styles/basics';
+@import '../../shared/styles/colors';
 @import '../../shared/styles/mixins';
 @import '../../shared/styles/variables';
 
@@ -32,5 +33,17 @@
   &:focus {
     background-color: inherit;
     color: white;
+  }
+}
+
+:global(.usa-button--secondary) {
+  border-radius: 0.26667rem;
+  color: $primary;
+  background-color: inherit;
+  box-shadow: inset 0 0 0 2px $primary;
+  &:hover {
+    background-color: inherit;
+    color: $primary-dark;
+    box-shadow: inset 0 0 0 2px $primary-dark;
   }
 }
