Import the New office.scss Into the Office Page
- import the styles from src/styles/office.scss so that the office
page uses the react-uswds styles
- change some of the styling so that the login page matches more
closely to how it did before using the new office.scss

--- a/src/pages/SignIn/SignIn.module.scss
+++ b/src/pages/SignIn/SignIn.module.scss
@@ -1,4 +1,15 @@
-button.signInButton {
+button.signInButtonCustomer {
   display: inline-flex;
   width: 100%;
+}
+
+.officeSignIn {
+  h1 {
+    font-kerning: normal;
+    font-weight: 700;
+    font-size: 34px;
+  }
+}
+button.signInButtonOffice {
+  display: initial;
 }
