MB-6218 Incorporate the EULA Modal Into the Office App (#5927)
* Incorporate Eula Modal Into the Office App

- remove code that disabled the Eula Modal in the office app
- update the tests to reflect useage of a button
- add in modal-root and app-root so that the modal knows where to
be injected into

* Import USWDS Styles

- put in an import for the USWDS styles so that the modal renders
correctly
- change the sign in to have a lower case i

* Change the Sign Out Link to a Button and Add Tests

- Change the Sign Out link to be a button for consistency and
edit the corresponding styling
- add tests to the LogoutButton to test if the Eula shows and
hides properly

* Add Tests to SignIn and LoginButton

- add test to signin to check that the EULA modal opens and closes
as expected on click of sign in and cancel
- add test to LoginButton to verify that the EULA modal does not
open when the devlocal sign in is clicked
- change the testid names to data-testid for consistency

* Change Styling of the Cancel Button

- change the styling of the cancel button so that it is no longer red

* Move Eula Specific Styling To Its Proper Location

- move styling away from the login button so that it would not affect
other secondary buttons
- move styling into new EulaModal.module.scss so that it only
affects the Eula modal

* Fix Use of Global in Eula and Add Comments

- fix how :global was being used
- add comments for further explination on the added css

* Fix Passing of Styles to Classname for Eula Modal

- fix how the styles get passed to className for the Eula Modal

* Remove Extra Styling on Eula Modal

- remove extra styling that was causing the EULA modal to appear
squashed when viewed in ios

--- a/src/containers/LoginButton/LoginButton.module.scss
+++ b/src/containers/LoginButton/LoginButton.module.scss
@@ -1,16 +1,27 @@
 @import '../../shared/styles/basics';
 @import '../../shared/styles/mixins';
-@import '../../shared/styles/variables';
 
-.signIn {
+.signIn,
+.signOut {
   height: 46px;
   &:hover {
     @include underline(0.25rem, 'white');
   }
   &:hover::after {
-    width: 46px;
     left: 16px;
     background-color: currentColor;
+  }
+}
+
+.signIn {
+  &:hover::after {
+    width: 46px;
+  }
+}
+
+.signOut {
+  &:hover::after {
+    width: 56px;
   }
 }
 
