--- a/src/shared/styles/_custom.scss
+++ b/src/shared/styles/_custom.scss
@@ -2,6 +2,7 @@
 @import 'shared/styles/colors.scss';
 @import 'shared/styles/_mixins.scss';
 @import 'shared/styles/_variables.scss';
+@import 'shared/styles/_basics.scss';
 
 html {
   scroll-behavior: smooth;
@@ -69,6 +70,7 @@ html {
     min-height: 135px;
   }
 }
+
 
 //
 //Tables
