--- a/src/shared/styles/_overrides.scss
+++ b/src/shared/styles/_overrides.scss
@@ -234,13 +234,14 @@
   background-color: $primary;
 }
 
-.usa-error-message,
+.usa-error-message, .usa-warning-message,
 .usa-checkbox__label,
 .usa-input {
   @include u-font-size('body', 'xs');
 }
 
-.usa-error-message {
+.usa-error-message,
+.usa-warning-message {
   @include u-padding(0);
 }
 
@@ -257,6 +258,23 @@
   &:hover {
     background-color: $link-light;
   }
+}
+
+.usa-form-group--warning {
+  border-left: 0.26667rem $warning solid;
+  margin-top: 2.13333rem;
+  padding-left: 1.06667rem;
+  position: relative;
+}
+
+.usa-label--warning {
+  @include u-margin-top(0);
+}
+
+.usa-warning-message {
+  color: #967019;
+  display: block;
+  font-weight: 700;
 }
 
 //Modals
