Start Incorporating the EULA Into the Admin App
- add the EULA so that it appears when the sign in buttons are
clicked
- add tags so that the EULA modal knows where to insert itself into
- fix some styling with the sign in buttons after changing the sign in
links into buttons

--- a/src/scenes/SystemAdmin/shared/LoginButton.module.scss
+++ b/src/scenes/SystemAdmin/shared/LoginButton.module.scss
@@ -9,3 +9,17 @@
     text-decoration: none;
   }
 }
+
+.signIn {
+  color: grey;
+  text-decoration: none;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-family: auto;
+  font-size: inherit;
+
+  &:focus {
+    outline-color: transparent;
+  }
+}
