--- a/src/scenes/SystemAdmin/shared/SignIn.module.scss
+++ b/src/scenes/SystemAdmin/shared/SignIn.module.scss
@@ -19,6 +19,7 @@
   padding: 1rem 2rem;
   text-align: center;
   text-decoration: none;
+  font-family: inherit;
 
   &:visited {
     color: #ffffff;
