--- a/src/components/Office/shipmentApprovalPreview.module.scss
+++ b/src/components/Office/shipmentApprovalPreview.module.scss
@@ -1,6 +1,7 @@
 @import '../../shared/styles/basics';
 @import '../../shared/styles/mixins';
 @import '../../shared/styles/colors';
+@import 'shared/styles/overrides';
 
 .approvalPreviewModal {
   min-width: 80rem;
