Fix LoginButton for Mobile View
- add css so that the sign in button will appear on the mobile view,
make the font black on a white background instead of white on a white
background, also change display so that it matches the local sign in
button

--- a/src/containers/LoginButton/LoginButton.module.scss
+++ b/src/containers/LoginButton/LoginButton.module.scss
@@ -1,6 +1,5 @@
 @import '../../shared/styles/basics';
 @import '../../shared/styles/mixins';
-
 .signIn,
 .signOut {
   height: 46px;
@@ -26,7 +25,11 @@
 }
 
 :global(.my-move-header .usa-nav__primary button) {
-  color: white;
+  color: black;
+  display: block;
+  @include at-media('desktop') {
+    color: white;
+  }
   &:hover,
   &:focus {
     background-color: inherit;
