--- a/src/scenes/SystemAdmin/shared/LoginButton.module.scss
+++ b/src/scenes/SystemAdmin/shared/LoginButton.module.scss
@@ -18,6 +18,8 @@
   cursor: pointer;
   font-family: auto;
   font-size: inherit;
+  margin: 0;
+  padding: 0;
 
   &:focus {
     outline-color: transparent;
