--- a/src/components/EulaModal/EulaModal.module.scss
+++ b/src/components/EulaModal/EulaModal.module.scss
@@ -16,10 +16,10 @@ applied on the EULA modal on the office and the admin app.
     padding-bottom: 12px;
     padding-top: 12px;
     font-size: 15px;
+    font-weight: 700;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 42px;
     border: none;
     color: white;
     &:hover {
