adds scoped css into overrides.css file

--- a/src/shared/styles/_overrides.scss
+++ b/src/shared/styles/_overrides.scss
@@ -259,6 +259,22 @@
   }
 }
 
+.usa-form-group.warning {
+  border-left: 0.26667rem $warning solid;
+  padding-left: 1.06667rem;
+  position: relative;
+
+  label {
+    color: $base-darker;
+  }
+
+  .usa-hint {
+    @include u-font-size('body', 'xs');
+    color: $base-darker;
+  }
+
+}
+
 //Modals
 
 .modal {
