adds in css to give div wrapped elements 8px of padding below

--- a/src/components/Customer/SelectableCard.module.scss
+++ b/src/components/Customer/SelectableCard.module.scss
@@ -55,6 +55,9 @@ p + .cardContainer {
   @media (min-width: $tablet) {
     padding-left: 2rem;
   }
+  div {
+    @include u-margin-bottom(1);
+  }
 }
 
 .helpButton {
