--- a/src/scenes/SystemAdmin/shared/LoginButton.module.scss
+++ b/src/scenes/SystemAdmin/shared/LoginButton.module.scss
@@ -9,3 +9,19 @@
     text-decoration: none;
   }
 }
+
+.signIn {
+  color: grey;
+  text-decoration: none;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-family: auto;
+  font-size: inherit;
+  margin: 0;
+  padding: 0;
+
+  &:focus {
+    outline-color: transparent;
+  }
+}
