use sentence case in payment requests header and set 3 unit h1 margin bottom

--- a/src/pages/Office/TXOMoveInfo/TXOTab.module.scss
+++ b/src/pages/Office/TXOMoveInfo/TXOTab.module.scss
@@ -7,6 +7,14 @@
   scroll-behavior: smooth;
   flex-grow: 1;
 
+  h1 {
+    @include u-margin-bottom(3);
+  }
+
+  .emptyMessage p {
+    @include u-margin-top(0);
+  }
+
   .gridContainer {
     .shipmentCard {
       @include u-padding-left(4);
