--- a/src/shared/styles/colors.scss
+++ b/src/shared/styles/colors.scss
@@ -20,6 +20,7 @@ $base-darkest: #171717;
 
 //Group 4: Form State colors
 $error: #d63e04;
+$error-dark: #A03003;
 $error-light: #f4e3db;
 $warning: #ffbe2e;
 $warning-light: #faf3d1;
