Added form stories, fixed cypress test

--- a/src/styles/form.module.scss
+++ b/src/styles/form.module.scss
@@ -99,6 +99,10 @@
     @include u-margin-bottom(6);
   }
 
+  :global(.usa-form-group:first-of-type .usa-label) {
+    @include u-margin-top('105');
+  }
+
   @include at-media('tablet') {
     @include u-margin-y(3);
 
