Add LeftNav to MTO page w/ tests and refactoring

--- a/src/components/LeftNav/index.module.scss
+++ b/src/components/LeftNav/index.module.scss
@@ -36,7 +36,8 @@
       border-top-left-radius: 0px;
     }
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       @include u-text('no-underline');
       @include u-text('primary-vivid');
     }
@@ -44,19 +45,19 @@
     &:active,
     &:global(.active) {
       @include u-text('bold');
-      @include u-text('black');
+      @include u-text('base-darker');
       @include u-border-left(0.5); //4px
       @include u-border-left('primary-vivid');
     }
 
     &:visited {
-      @include u-text('base');
+      @include u-text('base-darker');
     }
   }
 
   :global(.active) {
     @include u-text('bold');
-    @include u-text('black');
+    @include u-text('base-darker');
     @include u-border-left(0.5); //4px
     @include u-border-left('primary-vivid');
     @include u-padding-left(2);
