adds additional scoping to css for SectionWrapper component so that it does not apply css in an unexpected place

--- a/src/components/Customer/SectionWrapper.module.scss
+++ b/src/components/Customer/SectionWrapper.module.scss
@@ -33,7 +33,7 @@
     }
 
     :global {
-      .usa-form-group:first-of-type .usa-label {
+      .sectionWrapper .usa-form-group:first-of-type .usa-label {
         margin-top: 0;
       }
 
