[MB-6594] TOO sees missing info indicator on Move Details left nav

--- a/src/components/LeftNav/index.module.scss
+++ b/src/components/LeftNav/index.module.scss
@@ -36,7 +36,8 @@
       border-top-left-radius: 0px;
     }
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       @include u-text('no-underline');
       @include u-text('primary-vivid');
     }
