muliply and equal sign styling

--- a/src/components/Office/ServiceItemCalculations/ServiceItemCalculations.module.scss
+++ b/src/components/Office/ServiceItemCalculations/ServiceItemCalculations.module.scss
@@ -24,11 +24,8 @@
     }
   }
 
-  .multiplier {
-    color: $base-darkest;
-  }
-
-  .equal {
+  .multiplier, .equal {
+    @include u-padding-right(1);
     color: $base-darkest;
   }
 
