--- a/src/components/Office/ServiceItemCalculations/ServiceItemCalculations.module.scss
+++ b/src/components/Office/ServiceItemCalculations/ServiceItemCalculations.module.scss
@@ -5,11 +5,17 @@
 
 .ServiceItemCalculations {
   @include u-font-size('body', 2);
+  @include u-padding(2);
+  border: 1px solid $base-lighter;
+  border-radius: 3px;
+  background-color: $base-lightest;
+  min-width: 892px;
 
   .title {
     @include u-font-size('body', 6);
     @include u-font-weight('bold');
-    @include u-padding-bottom(2);
+    @include u-margin-top(0);
+    @include u-margin-bottom(2);
     color: $base-darkest;
   }
 
@@ -27,11 +33,6 @@
   }
 
   .flexGrid {
-    @include u-padding(2);
-    border: 1px solid $base-lighter;
-    border-radius: 3px;
-    background-color: $base-lightest;
-    min-width: 892px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -67,7 +68,6 @@
 
   .flexGridSmall {
     flex-direction: column;
-    min-width: unset;
 
     .col {
       @include u-margin-x(0);
@@ -80,7 +80,7 @@
         @include u-margin-left(4);
       }
 
-      hr {
+      .multiplier, .equal, hr {
         display: none;
       }
     }
@@ -107,4 +107,8 @@
     color: $base-darkest;
     margin-left: 0;
   }
+}
+
+.ServiceItemCalculationsSmall {
+  min-width: unset;
 }
