--- a/src/components/Office/ServiceItemCalculations/ServiceItemCalculations.module.scss
+++ b/src/components/Office/ServiceItemCalculations/ServiceItemCalculations.module.scss
@@ -45,7 +45,8 @@
       @include u-margin-right(4);
 
       hr {
-        @include u-margin-y(1);
+        @include u-margin-top(1);
+        @include u-margin-bottom(2);
         width: calc(100% + 4rem);
         border: 1px solid $base-lighter;
       }
@@ -92,7 +93,7 @@
 
     .col:last-of-type {
       @include u-margin-top(1);
-      @include u-padding-top(2);
+      @include u-padding-top(3);
       @include u-padding-bottom(0);
       border-top: 1px solid $base-lighter;
     }
