background color as $bg-gray

--- a/src/components/Office/ServiceItemCalculations/ServiceItemCalculations.module.scss
+++ b/src/components/Office/ServiceItemCalculations/ServiceItemCalculations.module.scss
@@ -8,7 +8,7 @@
   @include u-padding(2);
   border: 1px solid $base-lighter;
   border-radius: 3px;
-  background-color: $base-lightest;
+  background-color: $bg-gray;
   min-width: 892px;
 
   .title {
